--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@trpc/next": "^10.26.0",
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
+    "hnswlib-node": "^1.4.2",
     "langchain": "^0.0.98",
     "next": "^13.4.2",
     "openai": "^3.3.0",
