manually add metadata to source documents

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@trpc/next": "^10.26.0",
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
+    "epub2": "^3.0.1",
     "hnswlib-node": "^1.4.2",
+    "html-to-text": "^9.0.5",
     "langchain": "^0.0.98",
     "next": "^13.4.2",
     "openai": "^3.3.0",
