--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,10 @@
     "noUncheckedIndexedAccess": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./src/*"]
+      "~/*": ["./src/*"],
+      "@/*": ["components/*"],
+      "$/*": ["utils/*"],
+      "db": ["lib/prisma"]
     }
   },
   "include": [
