--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
     "epub2": "^3.0.1",
+    "graphql": "^16.7.1",
     "hnswlib-node": "^1.4.2",
     "html-to-text": "^9.0.5",
     "langchain": "^0.0.98",
@@ -27,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.12.2",
+    "weaviate-ts-client": "^1.3.3",
     "zod": "^3.21.4"
   },
   "devDependencies": {
