use externally hosted weaviate database

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@
 # When adding additional environment variables, the schema in "/src/env.mjs"
 # should be updated accordingly.
 
-# Example:
-# SERVERVAR="foo"
-# NEXT_PUBLIC_CLIENTVAR="bar"
+# For Freud we need the following environment variables
+# OPENAI_API_KEY="..."
+# WEAVIATE_API_KEY="..."
+WEAVIATE_SCHEME="https"
+WEAVIATE_HOST="freud-7ikpn0ov.weaviate.network"
