--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
     "epub2": "^3.0.1",
+    "framer-motion": "^10.12.18",
     "graphql": "^16.7.1",
     "hnswlib-node": "^1.4.2",
     "html-to-text": "^9.0.5",
