--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "build:deploy": "prisma generate && prisma migrate deploy && npm run build"
   },
   "dependencies": {
     "@prisma/client": "^4.16.2",
