--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
     "react-modal": "^3.16.1",
+    "react-pdf": "^7.1.3",
     "superjson": "1.12.2",
     "weaviate-ts-client": "^1.3.3",
     "zod": "^3.21.4"
