--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-hook-form": "^7.45.1",
     "react-modal": "^3.16.1",
     "react-pdf": "^7.1.3",
+    "react-reader": "^1.2.1",
     "superjson": "1.12.2",
     "weaviate-ts-client": "^1.3.3",
     "zod": "^3.21.4"
